<resources>
    <string name="app_name">SnoopSnitch</string>
    <string name="common_events">Events</string>
    <string name="common_silent_sms">Silent SMS</string>
    <string name="common_binary_sms">Binary SMS</string>
    <string name="common_imsi_catcher">IMSI Catcher</string>
    <string name="common_3g_title">3G</string>
    <string name="common_2g_title">2G</string>
    <string name="actionBar_title">SnoopSnitch</string>
    <string name="actionBar_subTitle">App ID:</string>
    <string name="action_scan">Scan</string>
    <string name="action_map">Map</string>
    <string name="action_info">Info</string>
    <string name="action_upload_pending_files">Upload pending files</string>
    <string name="action_active_test_advanced">Advanced active network test</string>
    <string name="action_upload_suspicious_dumps">Upload suspicious activity</string>
    <string name="action_upload_debug_logs">Submit feedback/question</string>
    <string name="action_network_info">Mobile network info</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_exit">Exit</string>
    <string name="common_button_upload">Upload</string>
    <string name="common_button_nodata">No data</string>
    <string name="common_button_networktest_start">Start network test</string>
    <string name="common_button_networktest_stop">Stop Test</string>
    <string name="warning_button_proceed_anyway">Ok, proceed anyway</string>
    <string name="warning_button_quit">Quit application</string>
    <string name="message_smsDetected">New SMS detected&#8230;</string>
    <string name="message_imsiCatcherDetected">New IMSI catcher detected&#8230;</string>
    <string name="message_recordingStarted">Recording started&#8230;</string>
    <string name="message_recordingStopped">Recording stopped&#8230;</string>
    <string name="alert_button_quit">Quit</string>
    <string name="alert_confirmation_title">Confirmation</string>
    <string name="alert_fatal_condition_title">Fatal condition</string>
    <string name="alert_notification_title">Notification</string>
    <string name="alert_deviceCompatibility_title">Compatibility check failed</string>
    <string name="alert_deviceCompatibility_header">Network scan is not possible.\n\nREASON:</string>
    <string name="alert_deviceCompatibility_message">\n\nVisit the project website for details:\nhttps://opensource.srlabs.de/projects/snoopsnitch</string>
    <string name="alert_upload_message">
Thank you for contributing radio data related to this security event
and supporting SnoopSnitch research and development!\n
\n
Please share additional details about this incident: snoopsnitch@srlabs.de
(PGP fingerprint 9728 A7F9 D457 1FBB 746F  5381 D52C AC10 634A 9561).
Do not forget your App-ID and the time the event happened. Thank you!\n
\n
This upload is encrypted. Keep in mind that radio traces may contain
private data and location information.\n
</string>
    <string name="alert_networktest_message">
DO NOT PICK UP THE PHONE AND DO NOT REJECT THE CALL WHEN THE SERVER CALLS. IF
YOU DO SO, YOUR NUMBER WILL GET BLACKLISTED AND BANNED FROM THE SERVICE.\n
\n
The active network test collects security information about your current
mobile network by sending and receiving a number of SMS and by placing and
receiving a number of automatic calls.\n
\n
It is normal to receive error status SMS from your operator during that test.
The test should be free of charge. HOWEVER, YOUR OPERATOR MAY CHARGE YOU FOR
OUTGOING SMS EVEN IF SENT TO AN INVALID DESTINATION!\n
\n
YOU MUST ONLY ENTER YOUR OWN PHONE NUMBER IN THE NEXT DIALOG.\n
Also make sure to enter your number in international format prefixed by your country code as follows:\n
\n
+[country-code][your-number]\n
\n
For example, a German (+49) number of 12345678 would be written:\n
+4912345678\n
</string>
    <string name="alert_networktest_privacy_disclaimer">
Following the test, the resulting radio data is uploaded to our servers.
If you do not agree with this, press Cancel now and disable
recording for active network tests in the settings menu. Note that radio traces may
contain private data and location information as a side effect.\n
</string>
    <string name="alert_first_app_start_message">
 <![CDATA[

 <h1> Welcome to SnoopSnitch </h1>

 Before you can use the app you have to understand what information SnoopSnitch is sending off your device.
 Read our  <a href="https://opensource.srlabs.de/projects/snoopsnitch/wiki/Privacy_Policy">Privacy Policy</a> and tap on "OK" to consent to uploading and processing your data as specified in the policy and summarized below.


        <h2>What information is collected</h2>

        For Android security patch analysis:
            <ul>
            <li>SnoopSnitch application version</li>
                <li>Detailed information about the device’s firmware build</li>
                <li>Vendor Phone numbers. The build.prop file contains the detailed information about your device\'s firmware build. This file might contain vendor phone numbers, which will be sent to our servers. In a future SnoopSnitch release those phone numbers will be stripped out and not uploaded to our server</li>
                <li>Pre-installed System Application information. We collect information about all the system applications which come with your firmware pre-installed (not the apps you have installed). We use this information in our patch analysis heuristics</li>
                <li>Patch test results</li>
            </ul>

        For mobile network security tests:
            <ul>
            <li>Information provided directly by the user. This may include: </li>
                <li>Personal data such as: phone number and email.</li>
                <li>Information provided indirectly by the user. This may include: </li>
                <li>Hardware details: phone model and processor information. </li>
                <li>software details: detailed AOS, Kernel and SnoopSnitch application versions.</li>
                <li>GPS locations, IMEI, IMSI and other mobile network data (LAC,CID, encryption status etc.)</li>
                <li>Complete radio network (signalling) traces related to detection events</li>
                <li>We may also collect other information intentionally provided to us by the user, for example through the Send Feedback feature. Transfer of these data is not mandatory.</li>
                <li> SnoopSnitch does not use cookies.</li>
            </ul>


	    <a name="Why-is-this-data-collected-and-how-is-it-used"></a>

        <h2>Why is this data collected and how is it used?</h2>

        For Android security patch analysis:
            <ul>
            <li>Efficiently pre-select relevant patch tests for a given device</li>
                <li>Improving the SnoopSnitch application and individual patch tests</li>
                <li>Provide a fact-based incentive to device vendors to further improve their patching processes</li>
            </ul>

        For mobile network security tests:
            <ul>
            <li>Providing and improving the SnoopSnitch application </li>
                <li>Analyzing and securing mobile networks and services, worldwide</li>
                <li>Provide mobile network statistics (through GSMMap) that help us understand how secure various Mobile Network Operators (MNOs) are</li>
                <li>Provide statistics of how, where, and when mobile networks are being attacked</li>
                <li>Provide a warning to users when their phones and network is being attacked by IMSI catchers and user tracking by SS7 or Silent SMS</li>
            </ul>

        <h2>Information sharing</h2>
	    <p>Anonymously collected analytics are kept safe on a database while personal data provided by e-mail are used only for users support purposes and nothing else.
	    No data are sold or shared with third party entities or companies.</p>
	]]>

</string>
    <string name="alert_airplanemode_on">
SnoopSnitch will not be able to perform mobile network tests, as long as the Airplane Mode is turned on.\n
\n
Please turn the Airplane Mode off and retry this test.
</string>
    <string name="about_text">
SnoopSnitch is an open source Android app that offers you the opportunity to test the security of your mobile device as well as of the mobile networks to which your device connects.\n

SnoopSnitch offers two core security testing features:\n\n

*Android patch level analysis*\n

SnoopSnitch\'s latest feature are tests to analyze whether a device’s build of Android OS is missing security patches that should be included relative to the device’s current security patch level date.\n
NOTE: These tests will work on all Android devices.\n\n

*Mobile network security tests*\n

SnoopSnitch\'s original security tests focus identifying potential attacks or surveillance against an individual device from the mobile network. SnoopSnitch collects and analyzes mobile radio data to make you aware of the overall security of the mobile network to which your device is connected and to warn you about threats like fake base stations (IMSI catchers) and user tracking.\n
NOTE: These tests will only work on Android devices with root access and a Qualcomm chipset.\n

For additional information, including an FAQ, privacy policy, and app source code, please visit our SnoopSnitch project website at:\n

https://opensource.srlabs.de/projects/snoopsnitch
</string>
    <string name="dashboard_lastanalysis">Last analysis: </string>
    <string name="dashboard_lastanalysis_time"></string>
    <string name="dashboard_sms_description">SMS &amp; SS7 attacks</string>
    <string name="dashboard_imsi_description">IMSI catcher</string>
    <string name="dashboard_timeline_month">m</string>
    <string name="dashboard_timeline_week">w</string>
    <string name="dashboard_timeline_lasthour">last hour</string>
    <string name="dashboard_timeline_today">24 hours</string>
    <string name="dashboard_network_security_title">Network Security</string>
    <string name="dashboard_network_security_provider_scrollview_header">Comparison</string>
    <string name="dashboard_network_security_interception_title">Intercept</string>
    <string name="dashboard_network_security_impersonation_title">Impersonation</string>
    <string name="dashboard_network_security_protectionLevel_high">higher\nprotection</string>
    <string name="dashboard_network_security_protectionLevel_low">lower\nprotection</string>
    <string name="detailChart_title_month">Last weeks</string>
    <string name="detailChart_title_week">Last 7 days</string>
    <string name="detailChart_title_day">Last 24 hours</string>
    <string name="detailChart_title_hour">Last hour</string>
    <string name="settings_actionBar_title">Settings</string>
    <string name="settings_start_on_boot_title">Start on boot</string>
    <string name="settings_start_on_boot_summary">Start the SnoopSnitch background service automatically when the device is booted</string>
    <string name="listview_imsi_item_score">Score:</string>
    <string name="listview_imsi_item_time">Time:</string>
    <string name="listview_imsi_item_position">Location:</string>
    <string name="listview_imsi_item_cellid">Cell ID:</string>
    <string name="debug_what_to_report">Please describe the problem you want to report:</string>
    <string name="debug_contact_info">Please enter your email address so that we can contact you:</string>
    <string name="debug_upload_snoopsnitch_debug_logs">Upload SnoopSnitch network scan logs</string>
    <string name="debug_upload_radio_traces">Upload radio traces (past hour)</string>
    <string name="debug_upload_metadata">Upload anonymized database metadata for suspicious events</string>
    <string name="debug_upload">Upload</string>
    <string name="debug_cancel">Cancel</string>
</resources>