<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item android:id="@+id/menu_action_scan"
          android:icon="@drawable/ic_menu_record_disable"
          android:title="@string/action_scan"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_action_map"
          android:icon="@drawable/ic_menu_map_disable"
          android:title="@string/action_map"
          android:showAsAction="ifRoom" />
    
    <!-- Items of the more menu -->
	<item android:id="@+id/label_patch_analysis_long"
		android:icon="@drawable/ic_patchalyzer"
		android:title="@string/label_patch_analysis_long"
		android:showAsAction="ifRoom" />
  	<item
        android:id="@+id/menu_action_info"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_info" android:visible="false" android:enabled="false"/>
  	<item
        android:id="@+id/menu_action_active_test_advanced"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_active_test_advanced"/>
  	<item
        android:id="@+id/menu_action_upload_pending_files"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_upload_pending_files"/>
  	<item
        android:id="@+id/menu_action_upload_debug_logs"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_upload_debug_logs"/>
    <item android:id="@+id/menu_action_network_info" android:title="@string/action_network_info" android:orderInCategory="150" android:showAsAction="never"></item><item
        android:id="@+id/menu_action_settings"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	<item
        android:id="@+id/menu_action_about"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_about"/>
	<item
        android:id="@+id/menu_action_exit"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_exit"/>
</menu>
