<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnDebugUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/debug_upload" />

        <Button
            android:id="@+id/btnDebugCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/debug_cancel" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkDebugUploadSnoopsnitchDebugLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/debug_upload_snoopsnitch_debug_logs" />

    <CheckBox
        android:id="@+id/checkDebugUploadRadioTraces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/debug_upload_radio_traces" />

    <CheckBox
        android:id="@+id/checkDebugUploadDatabaseMetadata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/debug_upload_metadata" />

    <TextView
        android:id="@+id/txtDebugContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug_contact_info" />

    <EditText
        android:id="@+id/editTextUploadDebugContactInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>



    <TextView
        android:id="@+id/txtUploadDebugWhatToReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug_what_to_report" />


    <EditText
        android:id="@+id/editTextUploadDebugWhatToReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</LinearLayout>