<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/common_sectionBackground"
    android:paddingBottom="5dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="5dp"
    android:weightSum="5" >

    <ImageView
        android:id="@+id/imgDetailListThreatType"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginLeft="4sp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:contentDescription=""
        android:src="@drawable/ic_content_imsi_event" >

    </ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtImsiRowTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listview_imsi_item_time"
            android:textSize="@dimen/text_medium"
            android:fontFamily="sans-serif-condensed" />

        <TextView
            android:id="@+id/txtImsiRowPositionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listview_imsi_item_position"
            android:textSize="@dimen/text_medium"
            android:fontFamily="sans-serif-condensed" />

        <TextView
            android:id="@+id/txtImsiRowCellIdTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listview_imsi_item_cellid"
            android:textSize="@dimen/text_medium"
            android:fontFamily="sans-serif-condensed" />

        <TextView
            android:id="@+id/txtImsiRowScoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listview_imsi_item_score"
            android:textSize="@dimen/text_medium"
            android:fontFamily="sans-serif-condensed" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight="5"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtImsiRowTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed" />

        <TextView
            android:id="@+id/txtImsiRowPositionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed" />

        <TextView
            android:id="@+id/txtImsiRowCellIdValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed" />

        <TextView
            android:id="@+id/txtImsiRowScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed" />

    </LinearLayout>

    <Button
        android:id="@+id/btnUploadImsi"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginRight="5dp"
        android:background="@drawable/custom_upload_button_background"
        android:text="@string/common_button_upload"
        android:textColor="@drawable/custom_upload_button_color"
        android:textSize="@dimen/text_medium" />

</LinearLayout> 